--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 pathlib
-librosa
+librosa>=0.10
+einops>=0.7
+opt_einsum>=3.3
+huggingface_hub>=0.23
+soundfile>=0.12
 
-torch
-torchaudio
-
-einops
-opt_einsum
-
-huggingface_hub
+# PyTorch + torchaudio (CUDA 12.1)
+torch>=2.3.0
+torchaudio>=2.3.0
+torchvision>=0.18.0
+--extra-index-url https://download.pytorch.org/whl/cu121
